Version 0.4.2
-------------
Bugfix (Issue #1): one-click NZB button was missing from binsearch.net (same as binsearch.info); thanks evertbeurskens for the patch.

Version 0.4.1
-------------
New feature: Added nzbindex.com 1-click NZB downloads
             Auto-categorization: 1st group that appears in "Group" column on nzbindex.com will be sent as the Category. Make sure to create categories that have names equal to the groups you usually download from (eg. a.b.sounds.mp3.french). Sorry, but there's no way I can use the SABnzbd 'group' field using the API... :\
			Bugfix: SABnzbd icons (used to send a NZB to SABnzbd) changed to 'fetching' (green arrows), but never changed to 'OK' (green logo). Cosmetic bugfix; the actual send operation worked fine.

Version 0.4
-----------
New feature: Added nzbs.org 1-click NZB downloads (code comes from SABConnect, slightly modified) Auto-categorization seems to work out-of-the-box. http://code.google.com/p/sabconnect/issues/detail?id=4
New feature: Added binsearch.info 1-click NZB downloads. http://code.google.com/p/sabconnect/issues/detail?id=8
             Auto-categorization: 1st group that appears in "Group" column on binsearch.info will be sent as the Category. Make sure to create categories that have names equal to the groups you usually download from (eg. a.b.sounds.mp3.french). Sorry, but there's no way I can use the SABnzbd 'group' field using the API... :\
New feature: Thanks to SABnzbd 0.5.3, auto-categorization for NZBMatrix.com! :)
             Documentation here: http://wiki.sabnzbd.org/configure-categories
             Example SABnzbd categories you need to create: http://cl.ly/eec6e7308ee01f800b3d
Improvement: Re-enabled the option to show a graph in popup.
Bugfix: Fixed 1-click for all services in latest (dev) Chrome; it wasn't sending to SABnzbd anymore; was just downloading the NZB locally instead.
Bugfix: Options page that wasn't working at all in latest (dev) Chrome.